--- a/src/_patterns/01-core/01-settings/settings-global/_settings.global.scss
+++ b/src/_patterns/01-core/01-settings/settings-global/_settings.global.scss
@@ -26,16 +26,22 @@ $bolt-shadow--large: 0 0.35rem 0.6rem rgba($bolt-shadow-color, 0.18);
 // Border
 $bolt-border-width: 1px;
 $bolt-border-style: solid;
+$bolt-border-color: rgba(bolt-color(gray), 0.2);
 $bolt-border-radius: 3px;
 
 // Transition
 $bolt-transition: ease-in-out 200ms;
+$bolt-transition-ease: ease-in-out;
+$bolt-transition-timing: 200ms;
 
 // Effects
 $bolt-translate-none: translate3d(0, 0, 0);
 $bolt-translate-raised--small: translate3d(0, -1px, 0);
 $bolt-translate-raised--medium: translate3d(0, -0.125rem, 0);
 $bolt-translate-raised--large: translate3d(0, -0.25rem, 0);
+
+
+
 
 /* ------------------------------------ *\
    All block elements
@@ -64,6 +70,9 @@ $bolt-unquoted-block-elements-list: ();
 
 $bolt-all-block-elements: $bolt-unquoted-block-elements-list;
 
+
+
+
 /* ------------------------------------ *\
    All heading elements
 \* ------------------------------------ */
@@ -83,3 +92,48 @@ $bolt-unquoted-heading-elements-list: ();
 }
 
 $bolt-all-heading-elements: $bolt-unquoted-heading-elements-list;
+
+
+
+
+/* ------------------------------------ *\
+   Custom Element Global Settings
+   used to collection names of custom
+   elements.
+\* ------------------------------------ */
+
+// Quoted custom elements used to globally collect group generic styles
+$_bolt-custom-block-elements: () !global;
+$_bolt-custom-inline-elements: () !global;
+$_bolt-custom-inline-block-elements: () !global;
+
+// Equivelent custom elements from above without the quotes -- perfect for using as a group CSS selector.
+$bolt-all-custom-block-elements: () !global;
+$bolt-all-custom-inline-block-elements: () !global;
+$bolt-all-custom-inline-elements: () !global;
+
+
+/**
+ * Register Element helper mixin
+ * registers any custom elements getting included
+ **/
+
+// Three different types available: inline, inline-block (which may be rendered as inline-flex), and block
+@mixin bolt-register-element($element, $element-type) {
+  @if ($element-type != 'inline' and $element-type != 'inline-block' and $element-type != 'block'){
+    @error 'Please register your #{$element} element as either an inline, inline-block or block.';
+  }
+
+  // @TODO: find a way to dynamically assign the right list to this
+  @if ($element-type == 'inline') {
+    $_bolt-custom-inline-elements: append($_bolt-custom-inline-elements, $element) !global;
+
+  } @else if  ( $element-type == 'block') {
+    $_bolt-custom-block-elements: append($_bolt-custom-block-elements, $element) !global;
+    @debug $_bolt-custom-block-elements;
+  } @else if  ( $element-type == 'inline-block') {
+    $_bolt-custom-inline-block-elements: append($_bolt-custom-inline-block-elements, $element) !global;
+  }
+}
+
+
