--- a/src/_patterns/02-components/04-bolt-unordered-list/src/unordered-list.scss
+++ b/src/_patterns/02-components/04-bolt-unordered-list/src/unordered-list.scss
@@ -1,17 +1,43 @@
-/* ------------------------------------ *\
-   unordered List
-\* ------------------------------------ */
-
+/*@import '@bolt/settings-global'; // [1] TODO: Comment out for now. Need to include only once.*/
 @import '@bolt/settings-colors';
 @import '@bolt/tools-spacing';
 @import '@bolt/tools-color-palette';
 
 
-$bolt-unordered-list-bullet-size: 8px;
 
 
+/* ------------------------------------ *\
+   unordered List
+\* ------------------------------------ */
+
+// Sample Usage
+// <bolt-unordered-list bolt-component>
+//   <ol class="c-bolt-unordered-list">
+//     <li class="c-bolt-unordered-list__item">
+//       Item 1
+//     </li>
+//     <li class="c-bolt-unordered-list__item">
+//       Item 2
+//     </li>
+//     <li class="c-bolt-unordered-list__item">
+//       Item 3
+//     </li>
+//   </ol>
+// </bolt-unordered-list>
+
+
+// Local Variables
+$bolt-unordered-list-bullet-size: 8px; // Using px here because I need to make a perfect circle without subpixel issues.
+$bolt-unordered-list-bullet-bg-color: var(--bolt-color-heading, bolt-color(indigo)); // TODO: refactor this after theming is done.
+
+
+// Register Custom Block Element
+@include bolt-register-element('bolt-unordered-list', 'block'); /* [1] */
+
+
+// Styles
 .c-bolt-unordered-list {
-  @include bolt-margin-left(0);
+  @include bolt-margin(0);
   @include bolt-padding(0);
 
   list-style: none;
@@ -26,13 +52,17 @@ $bolt-unordered-list-bullet-size: 8px;
   &:before {
     display: block;
     position: absolute;
-    top: $bolt-unordered-list-bullet-size;
+    top: .55rem;
     left: bolt-spacing(medium) * -1;
     width: $bolt-unordered-list-bullet-size;
     height: $bolt-unordered-list-bullet-size;
     content: '';
     border-radius: $bolt-unordered-list-bullet-size;
-    background-color: var(--bolt-color-heading, bolt-color(indigo)); // TODO: refactor this after theming is done.
-    line-height: 1;
+    background-color: $bolt-unordered-list-bullet-bg-color;
+    line-height: $bolt-unordered-list-bullet-size;
+  }
+
+  &:last-child {
+    @include bolt-margin-bottom(0);
   }
 }
