--- a/src/_patterns/01-core/01-settings/settings-spacing/_settings.spacing.scss
+++ b/src/_patterns/01-core/01-settings/settings-spacing/_settings.spacing.scss
@@ -17,7 +17,7 @@ $bolt-spacing-stretched: 1.5;
 /// Bolt's definition of spacing scale
 /// @type Map
 $bolt-spacing-values: (
-  // '':        1,
+  '':        1,
   'xxsmall': 0.125,
   'xsmall':  0.25,
   'small':   0.5,
