--- a/src/_patterns/04-pages/d8-resource-details/d8-resource-details.twig
+++ b/src/_patterns/04-pages/d8-resource-details/d8-resource-details.twig
@@ -14,7 +14,7 @@
 {% import _self as bolt %}
 
 
-      {% grid "o-bolt-grid--center o-bolt-grid--large o-bolt-grid--matrix o-bolt-grid--rev" %}
+      {% grid "o-bolt-grid--middle o-bolt-grid--center o-bolt-grid--large o-bolt-grid--matrix o-bolt-grid--rev" %}
 
         {# TODO: check if image exists #}
         {% cell 'u-bolt-width-1/1 u-bolt-width-5/12@medium' %}
