fix: fixing PL build so fonts load properly; cleaning up unused files

--- a/src/_meta/_00-head.twig
+++ b/src/_meta/_00-head.twig
@@ -18,7 +18,7 @@
 
     {# Inline Critical JS automatically using references to the file manifest webpack generates #}
     <script>
-    {{ inline("scripts/bolt-critical-path.min.js", "/bolt-website/") }}
+    {{ inline("scripts/bolt-critical-path.min.js", "/dist/") }}
     </script>
 
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
