fix: no longer rounding intrinsic ratio calculation so images carved out don't appear to be squished

--- a/src/_patterns/02-components/bolt-image/src/image.twig
+++ b/src/_patterns/02-components/bolt-image/src/image.twig
@@ -33,8 +33,8 @@
   {% set gcd = gcd | escape | raw | number_format %}
   
   {% if gcd != 0 and height != 0 and width != 0 %}
-    {% set imageHeightRatio = (height / gcd) | round %}
-    {% set imageWidthRatio = (width / gcd) | round %}
+    {% set imageHeightRatio = (height / gcd) %}
+    {% set imageWidthRatio = (width / gcd) %}
   {% else %}
     {% set imageHeightRatio = 1 %}
     {% set imageWidthRatio = 1 %}
