--- a/src/_patterns/02-components/components.scss
+++ b/src/_patterns/02-components/components.scss
@@ -4,6 +4,7 @@
 
 @import '@bolt/components-action-blocks';
 @import '@bolt/components-band';
+@import '@bolt/components-link';
 @import '@bolt/components-button';
 @import '@bolt/components-button-group';
 @import '@bolt/components-blockquote';
