feat: major overhaul of theming engine -- cleanup needed but much more consolidated for easier maintainability

--- a/src/_meta/_00-head.twig
+++ b/src/_meta/_00-head.twig
@@ -12,7 +12,7 @@
 
     {# Inline Critical Font-specific CSS automatically #}
     <style>
-    {{ inline("_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.css", "/src/") }}
+    {{ inline("scripts/critical-fonts.css", "/dist/") }}
     </style>
 
 
