--- a/src/_patterns/01-core/01-settings/settings-breakpoints/_settings.breakpoints.scss
+++ b/src/_patterns/01-core/01-settings/settings-breakpoints/_settings.breakpoints.scss
@@ -20,7 +20,8 @@ $bolt-breakpoints: (
   medium:  800px,
   large:   1000px,
   xlarge:  1200px,
-  xxlarge: 1400px
+  xxlarge: 1400px,
+  xxxlarge: 1920px
 );
 
 
