--- a/src/_patterns/01-core/04-elements/elements-all/_elements.all.scss
+++ b/src/_patterns/01-core/04-elements/elements-all/_elements.all.scss
@@ -13,5 +13,5 @@
 
 hr {
   opacity: 0.2;
-  border-top-color: var(--bolt-color-border, currentColor);
+  border-top-color: var(--bolt-theme-border, currentColor);
 }
