--- a/src/_patterns/02-components/bolt-background/src/background.twig
+++ b/src/_patterns/02-components/bolt-background/src/background.twig
@@ -38,14 +38,15 @@
     <div class="{{ "#{baseClass}__item" }}">
       {% if contentItems %}
         {% for item in contentItems %}
-          {% if loop.first %}
-            {% include pattern_template(item.pattern) with item | merge({
-              attributes: {
-                class: ["c-bolt-background__#{item.pattern}"]
-              },
-              ratio: false
-            }) only %}
-          {% endif %}
+
+          {% set itemAttributes = item.pattern ~ "Attributes" %}
+
+          {% include pattern_template(item.pattern) with item | merge({
+            (itemAttributes): {
+              class: ["c-bolt-background__#{item.pattern}"]
+            },
+            ratio: false
+          }) only %}
         {% endfor %}
       {% endif %}
 
