--- a/src/_patterns/02-components/bolt-blockquote/src/blockquote.scss
+++ b/src/_patterns/02-components/bolt-blockquote/src/blockquote.scss
@@ -51,11 +51,12 @@ $bolt-blockquote-footer-line-height: $bolt-line-height--tight;
 .c-bolt-blockquote {
   @include bolt-padding(0 medium);
 
-  color: var(--bolt-color-heading, bolt-color(indigo)); // TODO: refactor this after theming is done.
+  color: var(--bolt-theme-blockquote-text, var(--bolt-theme-text, inherit)); // TODO: refactor this after theming is done.
 
   border-left-width: $bolt-blockquote-border-width;
   border-left-style: $bolt-blockquote-border-style;
   border-left-color: $bolt-blockquote-border-color;
+  border-left-color: var(--bolt-theme-blockquote-border, $bolt-blockquote-border-color);
 }
 
 .c-bolt-blockquote__quote {
@@ -64,10 +65,10 @@ $bolt-blockquote-footer-line-height: $bolt-line-height--tight;
   display: block;
   position: relative;
 
-  p:first-child:before{
+  p:first-child:before {
     position: absolute;
     content: '\201C';
-    transform: translate3d(-110%, 0 ,0);
+    transform: translate3d(-110%, 0, 0);
   }
 
   p:last-child:after {
