--- a/src/_patterns/02-components/bolt-card/src/card.twig
+++ b/src/_patterns/02-components/bolt-card/src/card.twig
@@ -18,7 +18,7 @@
 ] %}
 
 {% if url %}
-  {% set attributes = attributes.setAttribute("href", url) %}
+  {% set attributes = attributes.setAttribute("data-href", url) %}
 {% endif %}
 
 {% set _card_footer_block = block('card_footer') %}
@@ -83,6 +83,7 @@
 
 <bolt-card
   theme="{{ theme }}"
+  {% if url %}url={{ url }}{% endif %}
   bolt-component>
   <{{ tag }} {{ attributes.addClass(classes) }}>
 
