--- a/src/_patterns/02-components/bolt-image/src/image.twig
+++ b/src/_patterns/02-components/bolt-image/src/image.twig
@@ -67,14 +67,14 @@
     {% set srcset = src %}
   {% endif %}
 
-{% set attributes = create_attribute(attributes | default([])).addClass('c-bolt-image') %}
+{% set attributes = create_attribute(attributes | default({})).addClass('c-bolt-image') %}
 {% set styles = attributes.getAttribute('style') | split(' ') | merge([
   "padding-top: #{ratio};"
 ]) %}
 {% set attributes = attributes.setAttribute('style', styles | join(' ')) %}
 
 
-{% set imgAttributes = create_attribute([]).addClass([
+{% set imageAttributes = create_attribute(imageAttributes | default({})).addClass([
     "c-bolt-image__img",
     lazyload ? "js-lazyload" : "",
     lazyload ? "is-lazyloading" : ""
@@ -83,33 +83,34 @@
 %}
 
 
+
 {% if lazyload %}
-  {% set imgAttributes = imgAttributes
+  {% set imageAttributes = imageAttributes
     .setAttribute("data-srcset", srcset)
     .setAttribute("srcset", placeholderDummySrc)
     .setAttribute("data-sizes", "auto")
   %}
 {% else %}
-  {% set imgAttributes = imgAttributes.setAttribute("srcset", srcset) %}
+  {% set imageAttributes = imageAttributes.setAttribute("srcset", srcset) %}
 {% endif %}
 
-{% set imgPlaceholderAttributes = create_attribute([]).addClass("c-bolt-image__placeholder") %}
-{% set styles = imgPlaceholderAttributes.getAttribute('style') | split(' ') | merge([
+{% set placeholderAttributes = create_attribute(placeholderAttributes | default({})).addClass("c-bolt-image__placeholder") %}
+{% set styles = placeholderAttributes.getAttribute('style') | split(' ') | merge([
     placeholderColor ? "background-color: #{placeholderColor};" : "",
     placeholderImage ? "background-image: url(#{placeholderImage});" : ""
   ])
 %}
-{% set imgPlaceholderAttributes = imgPlaceholderAttributes.setAttribute('style', styles) %}
+{% set placeholderAttributes = placeholderAttributes.setAttribute('style', styles) %}
 
 {% set imageTag %}
-  <img {{ imgAttributes }}>
+  <img {{ imageAttributes }}>
   <noscript>
-    <img {{ imgAttributes.removeClass(["js-lazyload", "is-lazyloading"]).setAttribute("srcset", srcset) }}>
+    <img {{ imageAttributes.removeClass(["js-lazyload", "is-lazyloading"]).setAttribute("srcset", srcset) }}>
   </noscript>
 {% endset %}
 
 {% set imagePlaceholder %}
-  <span {{ imgPlaceholderAttributes }}></span>
+  <span {{ placeholderAttributes }}></span>
 {% endset %}
 <bolt-image>
   {% block image_content %}
