--- a/src/_patterns/02-components/bolt-link/link.twig
+++ b/src/_patterns/02-components/bolt-link/link.twig
@@ -6,28 +6,35 @@
  * Available link variables:
  * - link:
  *   - attributes: HTML attributes to add to the link component.
- *   - text: The text displayed inside the link. D8 sets this to the `label` variable by default.
+ *   - text: The text displayed inside the  D8 sets this to the `label` variable by default.
  *
  */
 #}
 {% spaceless %}
 
   {% set link_classes = [
-    'c-link'
+    'c-bolt-link',
+    isHeadline ? 'c-bolt-link--headline' : ''
   ] %}
-  {% set attributes = create_attribute(link.attributes | default(attributes) | default({})) %}
+  {% set attributes = create_attribute(attributes | default(attributes) | default({})) %}
   {% set attributes = attributes.addClass(link_classes) %}
 
+  {% if href %}
+    {% set attributes = attributes.setAttribute('href', href) %}
+  {% elseif url %}
+    {% set attributes = attributes.setAttribute('href', url) %}
+  {% endif %}
 
   <a {{ attributes }}>
     
-  <span class="c-link__text">
-    {{ link.text | default(label) | default("Learn More") }}
+  <span class="c-bolt-link__text">
+    {{ text | default(label) | default("Learn More") }}
   </span>
     
   {% if icon %}
-    {% include "@bolt/icon.twig" with icon only %}
+    <span class="c-bolt-link__icon">
+      {% include "@bolt/icon.twig" with icon only %}
+    </span>
   {% endif %}
-  
   </a>
 {% endspaceless %}
