--- a/src/_patterns/02-components/bolt-teaser/src/teaser.twig
+++ b/src/_patterns/02-components/bolt-teaser/src/teaser.twig
@@ -22,7 +22,7 @@
   
   {% if content %}
     {% include "@bolt/text.twig" with {
-      text: content | striptags,
+      text: content | striptags('<a>'),
       tag: "p"
     } only %}
   {% endif %}
