--- a/src/_patterns/01-core/04-elements/elements-links/_elements.link.scss
+++ b/src/_patterns/01-core/04-elements/elements-links/_elements.link.scss
@@ -4,11 +4,34 @@
 
 a {
   color: inherit;
-  color: var(--bolt-color-primary, bolt-color(indigo, light));
   text-decoration: none;
 }
 
-a:visited {
-  color: inherit;
-  color: var(--bolt-color-primary, bolt-color(indigo, light));
+// @TODO: refactor into link component
+p a,
+p .c-bolt-link {
+  & {
+    color: inherit;
+    color: var(--bolt-theme-link-default, var(--bolt-theme-link, bolt-color(indigo, light)));
+  }
+
+  &:visited {
+    color: inherit;
+    color: var(--bolt-theme-link-visited, var(--bolt-theme-link, bolt-color(indigo, light)));
+  }
+
+  &:hover {
+    color: inherit;
+    color: var(--bolt-theme-link-hover, var(--bolt-theme-link, bolt-color(indigo, light)));
+  }
+
+  &:active {
+    color: inherit;
+    color: var(--bolt-theme-link-active, var(--bolt-theme-link, bolt-color(indigo, light)));
+  }
+}
+
+
+p:not[class] > a {
+  text-decoration: underline;
 }
