--- a/src/_patterns/01-core/05-objects/bolt-ui-list-object/src/ui-list.scss
+++ b/src/_patterns/01-core/05-objects/bolt-ui-list-object/src/ui-list.scss
@@ -18,7 +18,7 @@ $bolt-ui-list-padding--large: (large 0) !default;
 
 $bolt-ui-list-border-width: 1px !default;
 $bolt-ui-list-border-style: solid !default;
-$bolt-ui-list-border-color: var(--bolt-ui-border-color, currentColor);
+$bolt-ui-list-border-color: var(--bolt-theme-border, currentColor);
 
 .o-bolt-ui-list {
   margin: 0;
@@ -35,7 +35,6 @@ $bolt-ui-list-border-color: var(--bolt-ui-border-color, currentColor);
     border-bottom-style: $bolt-ui-list-border-style;
     border-bottom-color: $bolt-ui-list-border-color;
     border-bottom-width: 0;
-    opacity: 0.2;
     position: absolute;
     right: 0;
     bottom: 0;
