--- a/src/_patterns/02-components/bolt-button/src/_button.scss
+++ b/src/_patterns/02-components/bolt-button/src/_button.scss
@@ -38,48 +38,48 @@ $bolt-button-translate--active: $bolt-translate-none;
 
 // Placeholder for colors.
 @mixin bolt-link-color {
-  &:link {
-    color: var(--bolt-color-secondary, $bolt-color-secondary);
-  }
-
+  &:link,
   &:visited {
-    color: var(--bolt-color-secondary, inherit);
+    color: $bolt-color-secondary;
   }
+  // &:visited {
+  //   color: var(--bolt-color-secondary--visited, $bolt-color-secondary);
+  // }
 
   &:hover {
-    color: var(--bolt-color-secondary, mix(white, $bolt-color-secondary, 35%));
+    color: mix(white, $bolt-color-secondary, 35%);
+    // color: var(--bolt-color-secondary, mix(white, $bolt-color-secondary, 35%));
   }
 
   &:active {
-    color: var(--bolt-color-secondary, $bolt-color-secondary);
+    color: mix(white, $bolt-color-secondary, 15%);
+    // color: var(--bolt-color-secondary, $bolt-color-secondary);
   }
 }
 
 @mixin bolt-button-color($hiarchy) {
   @if $hiarchy == 'primary' {
-    &,
-    &:visited {
-      // color: #1F2555;
-      color: var(--bolt-theme-primary-text, $bolt-color-button-text);
-      border-color: var(--bolt-color-primary, $bolt-color-primary);
-      background-color: var(--bolt-color-primary, $bolt-color-primary);
-    }
+    // &,
+    // &:visited {
+    //   // color: #1F2555;
+    //   color: var(--bolt-theme-primary-text, $bolt-color-button-text);
+    //   border-color: var(--bolt-color-primary, $bolt-color-primary);
+    //   background-color: var(--bolt-color-primary, $bolt-color-primary);
+    // }
 
-    &:hover {
-      border-color: var(--bolt-color-primary, mix(white, $bolt-color-primary, 15%));
-      background-color: var(--bolt-color-primary, mix(white, $bolt-color-primary, 15%));
-      background-color: var(--bolt-theme-primary-color--hover);
+    // &:hover {
+    //   border-color: var(--bolt-color-primary, mix(white, $bolt-color-primary, 15%));
+    //   background-color: var(--bolt-color-primary, mix(white, $bolt-color-primary, 15%));
+    //   background-color: var(--bolt-theme-primary-color--hover);
       
-    }
+    // }
 
-    &:active {
-      border-color: var(--bolt-color-primary, mix(black, $bolt-color-primary, 25%));
-      background-color: var(--bolt-color-primary, mix(black, $bolt-color-primary, 25%));
-      background-color: var(--bolt-theme-primary-color--active);
-    }
-  }
-
-  @elseif $hiarchy == 'secondary' {
+    // &:active {
+    //   border-color: var(--bolt-color-primary, mix(black, $bolt-color-primary, 25%));
+    //   background-color: var(--bolt-color-primary, mix(black, $bolt-color-primary, 25%));
+    //   background-color: var(--bolt-theme-primary-color--active);
+    // }
+  } @elseif $hiarchy == 'secondary' {
     &,
     &:visited {
       color: var(--bolt-color-primary, $bolt-color-primary);
@@ -135,7 +135,6 @@ $bolt-button-translate--active: $bolt-translate-none;
       background-color: bolt-color(success, dark);
     }
   }
-
   @elseif $hiarchy == 'warning' {
     &,
     &:visited {
@@ -211,10 +210,17 @@ $bolt-button-translate--active: $bolt-translate-none;
   border-style: $bolt-button-border-style;
   border-width: $bolt-button-border-width;
   border-radius: $bolt-button-border-radius;
-  box-shadow: $bolt-button-shadow;
-  transition: all $bolt-button-transition;
+  
+  // box-shadow: 0 0 0 1px rgba(#16171A, 0.08), 0 1px 2px 0 rgba(#16171A, 0.2);
 
-  &:before {
+  // 16171A
+
+  // transition: all $bolt-button-transition;
+  transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+
+
+  &:before,
+  &:after {
     display: block;
     position: absolute;
     top: 0;
@@ -224,25 +230,39 @@ $bolt-button-translate--active: $bolt-translate-none;
     content: '';
     pointer-events: none;
     border-radius: $bolt-button-border-radius;
-    box-shadow: $bolt-button-shadow--hover;
-    opacity: 0;
+    // box-shadow: $bolt-button-shadow--hover;
     z-index: -1;
-    transition: opacity $bolt-button-transition;
+    // border: inherit; //inherit all border related styles by default
+    // box-shadow: 0 2px 6px 1px rgba(#16171A, 0.4);
+    // transition: opacity $bolt-button-transition;
+    transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
   }
 
-  &:not([disabled]){
-    &:hover, &:focus {
+  &:before {
+    box-shadow: $bolt-button-shadow;
+    opacity: 1;
+    z-index: 1;
+  }
+
+  &:after {
+    box-shadow: 0 2px 10px 1px rgba(#16171A, 0.4);
+    opacity: 0;
+  }
+
+  &:not([disabled]):not(.c-bolt-button--text) {
+    &:hover {
       transform: $bolt-button-translate--hover;
-      &:before {
+      &:before,
+      &:after {
         opacity: 1;
       }
     }
 
     &:active {
       transform: $bolt-button-translate--active;
-      
 
-      &:before {
+      &:before,
+      &:after {
         opacity: 0;
       }
     }
@@ -261,9 +281,49 @@ bolt-button {
   @include bolt-button;
 }
 
-.c-bolt-button,
+// .c-bolt-button,
 .c-bolt-button--primary {
-  @include bolt-button-color(primary);
+  $primary-bg-color--default: bolt-color(indigo, light);
+  $primary-bg-color--hover: #5764D9;
+  $primary-bg-color--active: #535BA6;
+// box-shadow: #16171A
+  &,
+  &:visited {
+    border-color: $primary-bg-color--default;
+    border-color: var(--bolt-theme-primary-border-default, $primary-bg-color--default);
+    
+    color: bolt-text-contrast($primary-bg-color--default);
+    color: var(--bolt-theme-primary-default-text, bolt-text-contrast($primary-bg-color--default));
+
+    background-color: $primary-bg-color--default;
+    background-color: var(--bolt-theme-primary-default, $primary-bg-color--default);
+  }
+
+  &:focus,
+  &:hover {
+    border-color: $primary-bg-color--hover;
+    border-color: var(--bolt-theme-primary-border-hover, $primary-bg-color--hover);
+    
+    color: bolt-text-contrast($primary-bg-color--hover);
+    color: var(--bolt-theme-primary-hover-text, bolt-text-contrast($primary-bg-color--default));
+
+    background-color: $primary-bg-color--hover;
+    background-color: var(--bolt-theme-primary-hover, $primary-bg-color--hover);
+  }
+
+  &:active {
+    border-color: $primary-bg-color--active;
+    border-color: var(--bolt-theme-primary-border-active, $primary-bg-color--active);
+    
+    color: bolt-text-contrast($primary-bg-color--active);
+    color: var(--bolt-theme-primary-active-text, bolt-text-contrast($primary-bg-color--active));
+
+    background-color: $primary-bg-color--active;
+    background-color: var(--bolt-theme-primary-active, $primary-bg-color--active);
+    // border-color: var(--bolt-color-primary, mix(black, $bolt-color-primary, 25%));
+    // background-color: var(--bolt-color-primary, mix(black, $bolt-color-primary, 25%));
+    // background-color: var(--bolt-theme-primary-color--active);
+  }
 
   // --bolt-theme-primary-color:     $bolt-theme-primary-color;
 }
@@ -367,22 +427,19 @@ bolt-button {
   align-self: center;
 }
 
-.c-bolt-button__item-text + .c-bolt-button__item-icon {
-  @include bolt-margin-left(xsmall);
+.c-bolt-button__item-text + .c-bolt-button__icon {
+  @include bolt-margin-left(xxsmall);
 }
 
-.c-bolt-button__item-icon {
-  width: 1em;
-  height: 1em;
-
-  svg {
-    width: 1em;
-    height: auto;
-    fill: currentColor;
-  }
+.c-bolt-button__icon {
+  display: inline-block;
+  display: inline-flex;
+  vertical-align: middle;
+  align-self: center;
+  line-height: 1; // workaround so icons can be vertically aligned properly
 }
 
-.c-bolt-button__item-icon + .c-bolt-button__item-text {
+.c-bolt-button__icon + .c-bolt-button__item-text {
   @include bolt-margin-left(xsmall);
 }
 
@@ -391,8 +448,76 @@ bolt-button {
 
 .c-bolt-link {
   @include bolt-reset-button-styles;
-  @include bolt-link-color;
 
   text-decoration: underline;
   transition: all $bolt-button-transition;
+}
+
+
+
+.c-bolt-button--text {
+  text-decoration: none;
+  color: currentColor;
+}
+
+.c-bolt-button--text:hover {
+  opacity: 0.7;
+  color: currentColor;
+}
+
+.c-bolt-button--text:active {
+  opacity: 0.5;
+  color: currentColor;
+}
+
+.c-bolt-button--text:visited {
+  opacity: 1;
+  color: currentColor;
+}
+
+
+
+
+.c-bolt-link--headline {
+  cursor: pointer;
+  text-decoration: none;
+  color: inherit;
+  color: var(--bolt-theme-heading-link-default, --bolt-theme-text);
+}
+
+.c-bolt-link--headline:hover {
+    color: inherit;
+    text-decoration: underline;
+    color: var(--bolt-theme-heading-link-hover, --bolt-theme-text);
+  }
+
+.c-bolt-link--headline:active {
+  color: inherit;
+  color: var(--bolt-theme-heading-link-active, --bolt-theme-text);
+}
+
+.c-bolt-link--headline:visited {
+  color: inherit;
+  color: var(--bolt-theme-heading-link-visited, --bolt-theme-text);
+}
+
+
+.c-bolt-link {
+  // &:link,
+  // &:visited {
+  //   // color: $bolt-color-secondary;
+  // }
+  // // &:visited {
+  // //   color: var(--bolt-color-secondary--visited, $bolt-color-secondary);
+  // // }
+
+  // &:hover {
+  //   color: mix(white, $bolt-color-secondary, 35%);
+  //   // color: var(--bolt-color-secondary, mix(white, $bolt-color-secondary, 35%));
+  // }
+
+  // &:active {
+  //   color: mix(white, $bolt-color-secondary, 15%);
+  //   // color: var(--bolt-color-secondary, $bolt-color-secondary);
+  // }
 }
