--- a/src/_patterns/02-components/bolt-icon/src/icon.scss
+++ b/src/_patterns/02-components/bolt-icon/src/icon.scss
@@ -15,10 +15,10 @@ bolt-icon {
 
 // By default, icons should inherit the size of the container it's put inside
 .c-bolt-icon {
+  display: block; //required for vertically aligning icons
   position: relative;
   width: 1em;
   height: 1em;
-  vertical-align: middle;
   box-sizing: border-box;
 }
 
