--- a/src/_patterns/01-core/01-settings/settings-breakpoints/_settings.breakpoints.scss
+++ b/src/_patterns/01-core/01-settings/settings-breakpoints/_settings.breakpoints.scss
@@ -14,13 +14,14 @@
 /// Major breakpoints used globally in Bolt. Uses breakpoint-sass and breakpoint-slicer to handle some of the heavier lifting.
 /// @type Map
 $bolt-breakpoints: (
-  xxsmall: 320px,
-  xsmall:  400px,
-  small:   600px,
-  medium:  800px,
-  large:   1000px,
-  xlarge:  1200px,
-  xxlarge: 1400px
+  xxsmall:  320px,
+  xsmall:   400px,
+  small:    600px,
+  medium:   800px,
+  large:    1000px,
+  xlarge:   1200px,
+  xxlarge:  1400px,
+  xxxlarge: 1920px
 );
 
 
