--- a/src/_patterns/01-core/04-elements/elements-page/_elements.page.scss
+++ b/src/_patterns/01-core/04-elements/elements-page/_elements.page.scss
@@ -1,31 +1,16 @@
 /* ------------------------------------ *\
   Body and heading declaration
 \* ------------------------------------ */
-$bolt-breakpoint--min: map-get($bolt-breakpoints, xsmall);
-$bolt-breakpoint--max: map-get($bolt-breakpoints, xlarge);
 
-
+$bolt-base-font-sizes: (
+  bolt-breakpoint(xxsmall):  14px,
+  bolt-breakpoint(xsmall):   15px,
+  bolt-breakpoint(xxlarge):  16px,
+  bolt-breakpoint(xxxlarge): 18px
+);
 
 html {
-  // Base type
-  font-size: $bolt-base-font-size--min;
-
-  // Responsive type
-  /* stylelint-disable scale-unlimited/declaration-strict-value */
-  @media screen and (min-width: 400px) {
-    font-size:
-      calc(
-        #{$bolt-base-font-size--min} +
-        (#{bolt-strip-unit($bolt-base-font-size--max)} - #{bolt-strip-unit($bolt-base-font-size--min)}) *
-        (100vw - #{$bolt-breakpoint--min}) / (#{bolt-strip-unit($bolt-breakpoint--max) - bolt-strip-unit($bolt-breakpoint--min)})
-      );
-  }
-  /* stylelint-enable */
-
-  // Large type
-  @include respond-to(xlarge) {
-    font-size: $bolt-base-font-size--max;
-  }
+  @include bolt-poly-fluid-sizing('font-size', $bolt-base-font-sizes);
 }
 
 body {
