--- a/src/_patterns/01-core/05-objects/bolt-ui-list-object/src/ui-list.scss
+++ b/src/_patterns/01-core/05-objects/bolt-ui-list-object/src/ui-list.scss
@@ -1,8 +1,10 @@
-/* ==========================================================================
-   #UI-LIST OBJECT
-   ========================================================================== */
-
+@import '@bolt/settings-global';
 @import '@bolt/tools-spacing';
+
+
+/* ------------------------------------ *\
+   UI List Object
+\* ------------------------------------ */
 
 /**
  * The UI list object creates blocky list items with a separator between each
@@ -16,34 +18,26 @@ $bolt-ui-list-padding--medium: (medium 0) !default;
 $bolt-ui-list-padding--large: (large 0) !default;
 
 
-$bolt-ui-list-border-width: 1px !default;
-$bolt-ui-list-border-style: solid !default;
-$bolt-ui-list-border-color: var(--bolt-ui-border-color, currentColor);
+$bolt-ui-list-border-width: $bolt-border-width !default;
+$bolt-ui-list-border-style: $bolt-border-style !default;
+$bolt-ui-list-border-color: $bolt-border-color !default;
 
+
+// Styles
 .o-bolt-ui-list {
-  margin: 0;
-  padding: 0;
+  @include bolt-margin(0);
+  @include bolt-padding(0);
   list-style: none;
 }
 
 .o-bolt-ui-list__item {
   position: relative;
+  border-bottom-width: $bolt-ui-list-border-width;
+  border-bottom-style: $bolt-ui-list-border-style;
+  border-bottom-color: $bolt-ui-list-border-color;
 
-  &:after {
-    content: '';
-    display: block;
-    border-bottom-style: $bolt-ui-list-border-style;
-    border-bottom-color: $bolt-ui-list-border-color;
+  &:last-child {
     border-bottom-width: 0;
-    opacity: 0.2;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0;
-  }
-
-  &:not(:last-child):after {
-    border-bottom-width: $bolt-ui-list-border-width;
   }
 
   > *:last-child {
@@ -51,14 +45,17 @@ $bolt-ui-list-border-color: var(--bolt-ui-border-color, currentColor);
   }
 }
 
+
+// Remove borders
+.o-bolt-ui-list--borderless > .o-bolt-ui-list__item {
+  border-bottom-width: 0;
+}
+
+
+// Padding sizes
 .o-bolt-ui-list > .o-bolt-ui-list__item,
 .o-bolt-ui-list--medium > .o-bolt-ui-list__item {
   @include bolt-padding($bolt-ui-list-padding--medium);
-}
-
-// Remove all padding
-.o-bolt-ui-list--collapsed > .o-bolt-ui-list__item {
-  @include bolt-padding($bolt-ui-list-padding--collapsed);
 }
 
 .o-bolt-ui-list--xsmall > .o-bolt-ui-list__item {
@@ -74,19 +71,19 @@ $bolt-ui-list-border-color: var(--bolt-ui-border-color, currentColor);
 }
 
 
-.o-bolt-ui-list--borderless {
-  --bolt-ui-border-color: transparent;
+// Remove all padding
+.o-bolt-ui-list--collapsed > .o-bolt-ui-list__item {
+  @include bolt-padding($bolt-ui-list-padding--collapsed);
 }
 
-.o-bolt-ui-list--small > .o-bolt-ui-list__item {
-  @include bolt-padding($bolt-ui-list-padding--small);
-}
 
-.o-bolt-ui-list--medium > .o-bolt-ui-list__item {
-  @include bolt-padding($bolt-ui-list-padding--medium);
-}
+// Remove start and end padding
+.o-bolt-ui-list--collapsed-ends > .o-bolt-ui-list__item {
+  &:first-child {
+    @include bolt-padding-top(0);
+  }
 
-.o-bolt-ui-list--large > .o-bolt-ui-list__item {
-  @include bolt-padding($bolt-ui-list-padding--large);
+  &:last-child {
+    @include bolt-padding-bottom(0);
+  }
 }
-
