fix: h4 to h6 twig files

--- a/src/_patterns/02-components/bolt-headline/demo/h1-through-h6/h6.twig
+++ b/src/_patterns/02-components/bolt-headline/demo/h1-through-h6/h6.twig
@@ -1,5 +1,5 @@
 {% include "@bolt/#{type | default('headline')}.twig" with {
-  size: size | default("small"),
+  size: size | default("xsmall"),
   weight: weight | default("bold"),
   uppercase: true,
   tag: "h6"
