--- a/src/_patterns/02-components/bolt-headline/demo/h1-through-h6/h5.twig
+++ b/src/_patterns/02-components/bolt-headline/demo/h1-through-h6/h5.twig
@@ -1,5 +1,5 @@
 {% include "@bolt/#{type | default('headline')}.twig" with {
-  size: size | default("medium"),
+  size: size | default("small"),
   weight: weight | default("bold"),
   tag: "h5"
 } %}
