--- a/src/_patterns/02-components/bolt-action-blocks/src/action-blocks.scss
+++ b/src/_patterns/02-components/bolt-action-blocks/src/action-blocks.scss
@@ -93,6 +93,7 @@ bolt-action-blocks {
   @include bolt-padding(0);
 
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   list-style: none;
 }
@@ -100,8 +101,9 @@ bolt-action-blocks {
 .c-bolt-action-blocks__item {
   display: block;
   flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: 150px;
   position: relative;
-  min-width: 150px;
   border-bottom-width: $bolt-action-blocks-border-width;
   border-bottom-style: $bolt-action-blocks-border-style;
   border-right-width: $bolt-action-blocks-border-width;
@@ -141,6 +143,6 @@ bolt-action-blocks {
 
 @for $number from 2 through 12 {
   .c-bolt-action-blocks--item-max-#{$number} > .c-bolt-action-blocks__item {
-    flex-basis: calc(100% / #{$number} - #{$bolt-action-blocks-border-width});
+    min-width: calc(100% / #{$number});
   }
 }
